--- a/src/com/greengrocer/views/Customer.fxml
+++ b/src/com/greengrocer/views/Customer.fxml
@@ -4,34 +4,37 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" 
+<BorderPane xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="com.greengrocer.controllers.CustomerController"
             styleClass="main-container">
-    
+
     <!-- Top Bar -->
     <top>
         <HBox styleClass="top-bar" alignment="CENTER_LEFT" spacing="20">
             <padding>
                 <Insets top="10" right="20" bottom="10" left="20"/>
             </padding>
-            
+
             <Label text="🥬 Group17 GreenGrocer" styleClass="brand-title"/>
-            
+
             <Region HBox.hgrow="ALWAYS"/>
-            
+
             <!-- Search Bar -->
             <HBox spacing="10" alignment="CENTER">
-                <TextField fx:id="searchField" promptText="Search products..." 
+                <TextField fx:id="searchField" promptText="Search products..."
                            styleClass="search-field" prefWidth="250"/>
                 <Button text="🔍" onAction="#handleSearch" styleClass="icon-button"/>
                 <Button text="Clear" onAction="#handleClearSearch" styleClass="secondary-button"/>
+                <Separator orientation="VERTICAL"/>
+                <Label text="Sort:" styleClass="field-label"/>
+                <ComboBox fx:id="sortComboBox" prefWidth="150" onAction="#handleSort" styleClass="combo-box"/>
             </HBox>
-            
+
             <Region HBox.hgrow="ALWAYS"/>
-            
+
             <!-- User Info and Actions -->
             <HBox spacing="15" alignment="CENTER_RIGHT">
-                <Button fx:id="cartButton" text="🛒 Cart (0)" onAction="#handleOpenCart" 
+                <Button fx:id="cartButton" text="🛒 Cart (0)" onAction="#handleOpenCart"
                         styleClass="cart-button"/>
                 <Label fx:id="usernameLabel" text="Welcome, User" styleClass="username-label"/>
                 <MenuButton text="Menu" styleClass="menu-button">
@@ -46,7 +49,7 @@
             </HBox>
         </HBox>
     </top>
-    
+
     <!-- Main Content -->
     <center>
         <ScrollPane fitToWidth="true" styleClass="content-scroll">
@@ -54,12 +57,12 @@
                 <padding>
                     <Insets top="20" right="20" bottom="20" left="20"/>
                 </padding>
-                
+
                 <!-- Vegetables Section -->
-                <TitledPane fx:id="vegetablesPane" text="🥕 Vegetables" expanded="true" 
+                <TitledPane fx:id="vegetablesPane" text="🥕 Vegetables" expanded="true"
                             styleClass="product-section">
                     <ScrollPane fitToWidth="true" prefHeight="280" styleClass="products-scroll">
-                        <FlowPane fx:id="vegetablesContainer" hgap="15" vgap="15" 
+                        <FlowPane fx:id="vegetablesContainer" hgap="15" vgap="15"
                                   styleClass="products-container">
                             <padding>
                                 <Insets top="10" right="10" bottom="10" left="10"/>
@@ -67,12 +70,12 @@
                         </FlowPane>
                     </ScrollPane>
                 </TitledPane>
-                
+
                 <!-- Fruits Section -->
-                <TitledPane fx:id="fruitsPane" text="🍎 Fruits" expanded="true" 
+                <TitledPane fx:id="fruitsPane" text="🍎 Fruits" expanded="true"
                             styleClass="product-section">
                     <ScrollPane fitToWidth="true" prefHeight="280" styleClass="products-scroll">
-                        <FlowPane fx:id="fruitsContainer" hgap="15" vgap="15" 
+                        <FlowPane fx:id="fruitsContainer" hgap="15" vgap="15"
                                   styleClass="products-container">
                             <padding>
                                 <Insets top="10" right="10" bottom="10" left="10"/>
@@ -83,7 +86,7 @@
             </VBox>
         </ScrollPane>
     </center>
-    
+
     <!-- Status Bar -->
     <bottom>
         <HBox styleClass="status-bar" alignment="CENTER" spacing="20">
@@ -95,5 +98,5 @@
             <Label fx:id="loyaltyLabel" text="" styleClass="loyalty-label"/>
         </HBox>
     </bottom>
-    
+
 </BorderPane>
